(IF) developed the Universal2 (arm64) support. Min Ragan-Kelley (MinRK) did a
lot of work discussing OSX things with MB, and contributed fixes as well.

See `this Changelog site <https://keepachangelog.com/en/1.0.0>`_ for helpful
rules on making a good Changelog.

********
Releases
********

* Unreleased

  First release that requires Python 3.

* 0.9.0 (Saturday July 17th 2021)

  Refactoring, updating and `arm64` (M1) support.

  * Libraries depending on ``@loader_path`` are now supported (KB).
  * ``@executable_path`` is supported and defaults to the current Python
    executable path.  This can be changed with the ``--executable-path`` flag
    (KB).
  * The ``--ignore-missing-dependencies`` flag can be given to ignore errors and
    delocate as many dependencies as possible (KB).
  * Dependencies are now delocated recursively (KB).
  * ``delocate.delocating.copy_recurse`` has been deprecated (KB).
  * ``delocate.libsana.resolve_rpath`` has been deprecated (KB).
  * Add required ad-hoc signing for libraries (IF).
  * Fix to escape regexp special characters to occur in library names (such as
    ``++`` in ``libc++`` (Grzegorz Bokota).
  * Support for new ``otool`` output from arm architecture fat libararies (IF).
  * Various CI improvements, including refactoring for test wheel generation,
    replacing ``i386`` with ``arm64`` for dual architectures, and start of
    Github workflow tests (MB, KB).
  * Various documentation fixes (Brad Solomon, Andrew Murray).

* 0.8.2 (Sunday July 12th 2020)

  Bugfix release.

  * Force UTF-8 for import of README file.  0.8.1 introduced non-ascii
    characters, so unguarded `open('README.rst', 'rt').read()` in `setup.py`
    gives an encoding error.  See GH issue 81.  Thanks to Joshua Haberman for
    the report.

* 0.8.1 (Sunday June 28th 2020)

  Bugfix release.

  * Adapt parsing of otool output to Catalina, avoiding crash in delocate
    (thanks to Github use `matham` for the report)